<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>xyz.felh</groupId>
        <artifactId>openai-java</artifactId>
        <version>4.0.2024080901</version>
    </parent>

    <artifactId>jtokkit</artifactId>
    <packaging>jar</packaging>

    <name>JTokkit of OpenAI API</name>
    <description>JTokkit of OpenAI API</description>
    <url>https://github.com/forestwanglin/openai-java/tree/main/jtokkit</url>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <commons-langs.version>3.14.0</commons-langs.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>xyz.felh</groupId>
            <artifactId>core</artifactId>
            <version>4.0.2024080901</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-langs.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

</project>